--- a/Topics/Regexes in programs/Finding digit-letter sequences with regex/task-info.yaml
+++ b/Topics/Regexes in programs/Finding digit-letter sequences with regex/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: "&quot;\\\\d{3}\\\\w&quot;"
+  - text: "&quot;\\\\d{3}\\\\D&quot;"
+  - text: "&quot;\\\\d{3}\\\\W&quot;"
+  - text: "&quot;\\\\d{3}\\\\S&quot;"
+  - text: "&quot;\\\\d{3}[A-Z]&quot;"
 files:
   - name: src/Task.java
     visible: true
